   materials) for features as its Spring.UnitRendering counterpart does
   for units
   note: the following two functions exist but are no-ops
     Spring.UnitRendering.SetFeatureLuaDraw
     Spring.FeatureRendering.SetUnitLuaDraw

 - add unsynced callout SetSkyBoxTexture(string texName) -> nil
   example usage: Spring.SetSkyBoxTexture("myskybox.dds")

 - add unsynced callout Spring.SetMapShadingTexture(string texType, string texName) -> boolean
   example usage: Spring.SetMapShadingTexture("$ssmf_specular", "name_of_my_shiny_texture")

 - add unsynced callout Spring.SetMapShader(
     number standardShaderID,
     number deferredShaderID
   ) -> nil
   (the ID's must refer to valid programs returned by gl.CreateShader;
   passing in a value of 0 will cause the respective shader to revert
   back to its engine default)
   custom map shaders that declare a uniform ivec2 named "texSquare"
   can sample from the default diffuse texture(s), which are always
   bound to TU 0

 - add new callins DrawGroundPreForward and DrawGroundPreDeferred
   these run at the start of their respective passes when a custom
   map shader has been assigned via Spring.SetMapShader (convenient
   for setting uniforms)

 - add new callin DrawGroundPostDeferred; this runs at the end of its
   respective deferred pass and allows proper frame compositing (with
   ground flashes/decals/foliage/etc, which are drawn between it and
   DrawWorldPreUnit) via gl.CopyToTexture

 - add new callins DrawUnitsPostDeferred and DrawFeaturesPostDeferred
   these run at the end of their respective deferred passes to inform
   Lua code it should make use of the $model_gbuffer_* textures before
   another pass overwrites them (and to allow proper blending with e.g.
   cloaked objects which are drawn between these events and DrawWorld
   via gl.CopyToTexture)


   NOTE: the *PostDeferred events are only sent (and only have a real
   purpose) if forward drawing is disabled, whereas the DrawGroundPre*